     from `upsmon` which calls `upssched`) as an environment variable into
     the ultimately executed `CMDSCRIPT` processes. [#3105]

 - The `nut-driver-enumerator.sh` script (NDE) updates:
   * Revised info/error/warning/debug message emission so they go to `stderr`
     and have a consistent look. Revised some typos along the way. [issue #3194]

 - `configure` script updates:
   * For ages, most recipes for building NUT had customized the `sysconfdir` to
     be `/etc/nut`, which is not exactly the *system* configuration directory.
     This is finally deprecated, with new `--with-confdir` configuration option
     taking over the role of a full path to configuration files (by default
     `${sysconfdir}${confdir_suffix}`), and new `--with-confdir-suffix` allowing
     to specify just `/nut` or `/ups` that would be tacked onto the default
     `${sysconfdir}` to resolve the `${confdir}`. Default behavior should be
     same as with previous builds: if `sysconfdir` is customized (or `prefix`
     is kept at built-in default), the `confdir_suffix` will default to empty;
     otherwise it assumes the value of `/${PACKAGE_NAME}` to become `/nut` in
     most cases. A `--with-confdir-examples` option was also introduced, to
     help distributions that place `*.conf.sample` files into docs or other
     locations. [#3131]
   * The `configure` script would now probe (if it can) the operating systems
     for more user and group account names, such as `upsmon`, `nutmon`, `ups`,
     `nut` (last hit wins, separately for user and groups accounts) settling
     on one of those if detected instead of `nobody` (and optionally `nogroup`).
     It would also warn if `nobody` or `nogroup` end up being used for a build.
     [#3173]
   * Default `PIDPATH` is now more strictly `/var/run`, unless building on a
     system conforming to FHS-3.0 standard where that location is absent or
     is a symlink, while `/run` exists and is a true directory. [#3099]